# cranelisp

./: .gitignore  CLAUDE.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  NOTES.md  README.md  ROADMAP.md  justfile
audits/: CLAUDE.md  typechecker.md
cranelisp-exe-bundle/: Cargo.toml
cranelisp-exe-bundle/src/: lib.rs
cranelisp-platform/: Cargo.toml
cranelisp-platform/src/: lib.rs
cranelisp-runtime/: Cargo.toml
cranelisp-runtime/src/: intrinsics.rs  lib.rs  marshal.rs  primitives.rs
docs/: adt.md  architecture.md  backend-selection.md  closures.md  codegen.md  comparison.md  concurrency.md  constrained-polymorphism.md  data-structures.md  heap_layout.md  hkt.md  index.md  io.md  macros.md  modules.md  multi-sig.md  name-resolution.md  platform.md  repl-display.md  syntax.md  traits.md  type-system.md
examples/: adt.cl  closure.cl  curry.cl  dot_notation.cl  factorial.cl  float.cl  functor.cl  hello.cl  list.cl  macro.cl  mapfold.cl  seq.cl  strings.cl  sum-input.cl  threading.cl  traits.cl  vec.cl
examples/imports/: main.cl  types.cl
examples/modules/: main.cl  math.cl  util.cl
lib/: .gitignore  core.cl  prelude.cl
lib/core/: collections.cl  formats.cl  io.cl  numerics.cl  option.cl  (+2 more)
src/: CLAUDE.md  ast.rs  ast_builder.rs  batch.rs  cache.rs  captures.rs  codegen.rs  display.rs  error.rs  exe.rs  intrinsics.rs  jit.rs  lib.rs  linker.rs  macro_expand.rs  main.rs  marshal.rs  module.rs  names.rs  platform.rs  primitives.rs  repl.rs  sexp.rs  typechecker.rs  types.rs
tests/: CLAUDE.md  e2e.rs  integration.rs  platform.rs  rc.rs  test_prelude.cl
(+33 files in other folders)
